--- a/www/home/index.html
+++ b/www/home/index.html
@@ -13,8 +13,8 @@
     <script src="/node_modules/angular-animate/angular-animate.min.js"></script> 
     <script src="/node_modules/angular-material/angular-material.min.js"></script> 
 
-    <script src="./www/app.js"></script>
-    <script src="./www/firstCtrl.js"></script>
+    <script src="./www/home/app.js"></script>
+    <script src="./www/home/firstCtrl.js"></script>
 </head>
 <body ng-app="app" ng-controller="firstCtrl as vm">
     
