--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./node_modules/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="./node_modules/angular-material-data-table/dist/md-data-table.min.css">
    
 
     <!--No node module or no right package in node modules-->
     <link rel="stylesheet" href="./www/common/css/normalize.css">
     <link rel="stylesheet" href="./www/common/css/fontawesome-all.min.css">
+    
     <link rel="stylesheet" href="./www/admin/style.css">
-    <link rel="stylesheet" href="./www/common/css/ng-table.css">
 
 
     <title>Place Quality Admin</title>
@@ -20,16 +21,14 @@
     <script src="./node_modules/angular-aria/angular-aria.min.js"></script> 
     <script src="./node_modules/angular-animate/angular-animate.min.js"></script> 
     <script src="./node_modules/angular-material/angular-material.min.js"></script> 
+    <script src="./node_modules/angular-material-data-table/dist/md-data-table.min.js"></script> 
     <script src="./node_modules/angular-messages/angular-messages.min.js"></script>
     <script src="./node_modules/ngstorage/ngStorage.min.js"></script>
-    <script src="./node_modules/ng-table/bundles/ng-table.min.js"></script>
    
 
     <!--No node module or no right package in node modules-->
     <script src="./www/common/libs/angular-ui-router.min.js"></script>
     <script src="./www/common/libs/angular-jwt.min.js"></script>
-
-
     
 
     <script src="./www/admin/app.js"></script>
