--- a/www/home/index.html
+++ b/www/home/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="./node_modules/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="./node_modules/angular-material-data-table/dist/md-data-table.min.css">
 
     <!--No node module or no right package in node modules-->
     <link rel="stylesheet" href="./www/common/css/normalize.css">
     <link rel="stylesheet" href="./www/common/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="./www/home/style.css">
-    <link rel="stylesheet" href="./www/common/css/ng-table.css">
 
 
     <title>Place Quality</title>
@@ -20,9 +20,9 @@
     <script src="./node_modules/angular-aria/angular-aria.min.js"></script> 
     <script src="./node_modules/angular-animate/angular-animate.min.js"></script> 
     <script src="./node_modules/angular-material/angular-material.min.js"></script> 
+    <script src="./node_modules/angular-material-data-table/dist/md-data-table.min.js"></script> 
     <script src="./node_modules/angular-messages/angular-messages.min.js"></script>
     <script src="./node_modules/ngstorage/ngStorage.min.js"></script>
-    <script src="./node_modules/ng-table/bundles/ng-table.min.js"></script>
    
 
     <!--No node module or no right package in node modules-->
@@ -45,25 +45,28 @@
 
 </head>
 <body ng-app="app">
-        <md-toolbar class="fixed-navbar" ng-controller="navController as vm">
-            <div class="md-toolbar-tools">
-                <h2 flex md-truncate ><a  href="" ui-sref="home">Place Quality</a></h2>
-                <md-button ui-sref="mysuggestions" ng-if="vm.user_id">
-                    <a  href="">My Suggestions</a>
-                </md-button>
-                <md-button class="md-icon-button fa-ng-size" ng-click="vm.logout()" ng-if="vm.user_id">
-                        <md-icon md-font-icon="fa-sign-out-alt" class="fa fa-ng"></md-icon>
-                    </md-button>
-                <md-button ui-sref="login" ng-if="!vm.user_id">
-                    <a  href="">Log In</a>
-                </md-button>
-                <md-button ui-sref="signup" ng-if="!vm.user_id">
-                    <a  href="">Sign Up</a>
-                </md-button>
-            </div>
-        </md-toolbar>
-    <div class="navbar-padding">
-            <ui-view ></ui-view>
-    </div> 
+    <div class="background">
+            <md-toolbar class="fixed-navbar" ng-controller="navController as vm">
+                    <div class="md-toolbar-tools">
+                        <h2 flex md-truncate ><a  href="" ui-sref="home">Place Quality</a></h2>
+                        <md-button ui-sref="mysuggestions" ng-if="vm.user_id">
+                            <a  href="">My Suggestions</a>
+                        </md-button>
+                        <md-button class="md-icon-button fa-ng-size" ng-click="vm.logout()" ng-if="vm.user_id">
+                                <md-icon md-font-icon="fa-sign-out-alt" class="fa fa-ng"></md-icon>
+                            </md-button>
+                        <md-button ui-sref="login" ng-if="!vm.user_id">
+                            <a  href="">Log In</a>
+                        </md-button>
+                        <md-button ui-sref="signup" ng-if="!vm.user_id">
+                            <a  href="">Sign Up</a>
+                        </md-button>
+                    </div>
+                </md-toolbar>
+            <div class=" navbar-padding ">
+                    <ui-view ></ui-view>
+            </div> 
+         </div>
+        
 </body>
 </html>
