--- a/www/home/index.html
+++ b/www/home/index.html
@@ -24,7 +24,7 @@
     <script src="./node_modules/angular-messages/angular-messages.min.js"></script>
     <script src="./node_modules/ngstorage/ngStorage.min.js"></script>
     
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyB63qOib521vdX7GqSl9LcMhTP4LM5WvhA&libraries=places"></script>
+    <script src="//maps.google.com/maps/api/js?key=AIzaSyB63qOib521vdX7GqSl9LcMhTP4LM5WvhA&libraries=places"></script>
     <script src="./node_modules/ngmap/build/scripts/ng-map.min.js"></script>
    
 
